--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/123/workspace/103062235_assignment6/lib/Processing/core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/123/workspace/103062235_assignment6/lib/Ani/Ani.jar"/>
+	<classpathentry kind="lib" path="C:/Users/123/workspace/103062235_assignment6/lib/controlP5/controlP5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
